--- a/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
+++ b/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
@@ -187,3 +187,304 @@ max-width: 100%;
     }
   }
 }
+
+
+// .verify-details {
+//   padding: 10px;
+//   font-family: Nunito Sans, Arial, sans-serif;
+
+
+// max-width: 100%;
+ 
+
+
+//   h1 {
+//     font-size: 28px;
+//     font-weight: 800;
+//     color: #9867e9;
+//     // margin-left: 65px;
+//   }
+
+//   .table-container {
+//     margin-top: 20px;
+//     display: flex;
+//     justify-content: center;
+
+//     table {
+//       width: 90%;
+//       border-collapse: collapse;
+//       th {
+//         padding: 10px;
+//         border: 1px solid #000;
+//         font-size: 15px;
+//         color: black;
+//         font-weight: 500;
+//       }
+
+//       td {
+//         padding: 10px;
+//         border: 1px solid #000;
+//         font-size: 15px;
+//         color: black;
+//         font-weight: 200;
+//       }
+//     }
+//   }
+
+//   .details-section {
+//     margin-left: 26px;
+//     padding: 10px;
+//     margin-top: 20px;
+//     font-size: 14px;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 10px;
+
+//     p {
+//       margin: 5px 0;
+//       font-size: 19px;
+//     }
+
+//     strong {
+//      font-size: 18px;
+//     }
+//     span{
+//       font-size: 18px;
+
+//     }
+//   }
+//   .edit-icon {
+//     width: 45px;
+//     height: 15px;
+//     margin-left: 15px;
+//   }
+
+//   .address-details {
+//     margin: 10px 0;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 20px;
+
+//     h2 {
+//       font-size: 23px;
+//       color: black;
+//       // margin-left: 65px;
+
+//       margin-bottom: 10px;
+//     }
+
+//     .address-block {
+      
+//       padding: 10px;
+//       // border: 1px solid #ddd;
+//       border-radius: 5px;
+//       display: flex;
+//       gap: 20px;
+//       flex-direction: column;
+//       margin-left: 37px;                                                                         
+
+//       h3 {
+//         font-size: 21px;
+//         font-weight: bold;
+//         // border: 1px solid black;
+//         margin-top: -5px;
+//         margin-left: 5px;
+
+//         // margin-bottom: 10px;
+//       }
+
+//       p {
+//         margin: 5px 0;
+//         font-size: 14px;
+//         margin-top: 0px;
+//         display: flex;
+//         gap: 50px;
+
+//         strong {
+//           font-size: 18px;
+//         }
+//         span{
+//           font-size: 18px;
+
+//         }
+//       }
+//     }
+//   }
+//   .styleForCity {
+//     display: flex;
+//     justify-content: flex-start;
+//     gap: 30%;
+//   }
+
+//   .button-container {
+   
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: flex-end;
+//     align-items: center;
+//     margin-right: 105px;
+//     gap: 10px;
+
+//     .save {
+     
+//       background-color: white;
+//       color: #9867e9;
+//       width: 150px;
+//       height: 40px;
+//       text-align: center;
+//       font-size: 18px;
+
+//       border-radius: 5px;
+//       margin: 0;
+//       border: none;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+     
+    
+//       white-space: nowrap;
+//     }
+
+//     .submit-button {
+//       background-color: #9867e9;
+//       color: white;
+//       width: 150px;
+//       height: 40px;
+//       text-align: center;
+//       font-size: 20px;
+//       border-radius: 5px;
+//       margin: 0;
+//       border: none;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+      
+//     }
+//   }
+// }
+
+
+
+// @media screen and (max-width: 480px) {
+
+//   .verify-details h1{
+//     display: flex;
+//     margin-left: -25px;
+//   }
+
+
+//   .verify-details .address-details .address-block p {
+//     margin: 5px 0;
+//     font-size: 14px;
+//     margin-top: 0px;
+//     display: flex;
+//     margin-left: -69px;
+//     gap: 20px;
+//   }
+
+//   .address-details{
+//     h2{
+//       margin-left: -22px;
+//     }
+//   }
+
+//   .address-block{
+//     h3{
+    
+//    margin-left: 0px;
+//     }
+//   }
+
+//   .verify-details .details-section{
+//     margin-left: -57px;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 0px;
+//   }
+
+ 
+
+//   .column{
+//     display: flex;
+//     flex-direction: column;
+//     gap: 20px;
+  
+//   }
+//   .column1{
+//     display: flex;
+//     flex-direction: column;
+//   gap: 20px  !important;
+   
+//     margin: 0;
+//     padding: 0;
+    
+//   }
+//   .button-container{
+  
+//     width: 100%;
+//   }
+  
+// }
+
+
+// @media (min-width: 481px) and (max-width: 767px){
+//   .verify-details h1{
+//     display: flex;
+//     margin-left: -25px;
+//   }
+
+
+//   .verify-details .address-details .address-block p {
+//     margin: 5px 0;
+//     font-size: 14px;
+//     margin-top: 0px;
+//     display: flex;
+//     margin-left: -69px;
+//     gap: 20px;
+//   }
+
+//   .address-details{
+//     h2{
+//       margin-left: -22px;
+//     }
+//   }
+
+//   .address-block{
+//     h3{
+    
+//    margin-left: 0px;
+//     }
+//   }
+
+//   .verify-details .details-section{
+//     margin-left: -57px;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 0px;
+//   }
+
+ 
+
+//   .column{
+//     display: flex;
+//     flex-direction: column;
+//     gap: 20px;
+  
+//   }
+//   .column1{
+//     display: flex;
+//     flex-direction: column;
+//   gap: 20px  !important;
+   
+//     margin: 0;
+//     padding: 0;
+    
+//   }
+//   .button-container{
+
+// display: flex;
+// justify-content: center;
+//     width: 70%;
+//   }
+
+// }
