--- a/src/pages/(loggedIn)/donation/NewDonation.scss
+++ b/src/pages/(loggedIn)/donation/NewDonation.scss
@@ -158,6 +158,7 @@
     flex-direction: column;
     gap: 20px;
     
+    
     .donor-details {
       width: 100%;
       height: fit-content;
@@ -435,7 +436,7 @@ select {
 // Donor Details Card - New styles matching the image
 .details-card.donor-details {
   flex: 1;
-  height: fit-content;
+  max-height: 520px;
   padding: 24px;
   margin-bottom: 16px;
 
